# game_of_life

./: .gitignore  README.md
data/: random_game_t0
examples/: hello_world_cpp_omp.py  hello_world_cpp_wrap.py  play_a_game.py  play_a_game_with_cpp.py  play_a_game_with_cpp_omp.py  play_a_random_game.py  play_another_game.py  play_the_game.py  seeds_creator.py  visualize_a_game.py  visualize_a_state.py
report/: coursework_cpp_2.aux  coursework_cpp_2.tex
src/core/cpp_source/: CMakeLists.txt  zz_CMakeLists.txt
src/core/cpp_source/HelloBox/: CMakeLists.txt  hello_box.cpp
src/core/cpp_source/HelloMember/: CMakeLists.txt  member.cpp
src/core/cpp_source/HelloWorld/: CMakeLists.txt  hello.py
src/core/cpp_source/HelloWorldOMP/: CMakeLists.txt  helloOMP.cpp
src/core/cpp_source/UpdateState/: CMakeLists.txt  state_manager.cpp  state_manager_omp.cpp
src/core/cpp_source/update_state_basic/: UpdateStateBasic.cpp
src/core/python_source/: game_manager.py  update_state_manager.py
src/state_manager/: state_manager.py
src/utils/: aux_functions.py  state_manager.py  visualize.py
src/visualisation/: plot_graphs.py  visualize.py
stats/: increasing_board_shape.py  plot_graphs.py
test/: test_cpp.py  test_simple_games.py
test/data_test/: test_block_t0.txt  test_cpp_implementation.py
utils_python/core/: state_manager.py
utils_python/examples/: visualize_a_state.py
